--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="labelHero">Hero</string>
     <string name="labelHeroes">Heroes</string>
     <string name="labelLock">Lock</string>
+    <string name="labelGameSets">Game Sets</string>
 
     <!-- Buttons -->
     <string name="button1">1</string>
@@ -20,5 +21,6 @@
     <string name="button4">4</string>
     <string name="button5">5</string>
     <string name="activityFilter">Filter</string>
-    <string name="labelGameSets">Game Sets</string>
+
+    <string name="checkEnabled">Enabled</string>
 </resources>
