--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Legendary Helper</string>
 
-    <!-- Labels -->
     <string name="labelPlayers">Players</string>
     <string name="labelMastermind">Mastermind</string>
     <string name="labelMasterminds">Masterminds</string>
@@ -14,13 +13,19 @@
     <string name="labelLock">Lock</string>
     <string name="labelGameSets">Game Sets</string>
 
-    <!-- Buttons -->
     <string name="button1">1</string>
     <string name="button2">2</string>
     <string name="button3">3</string>
     <string name="button4">4</string>
     <string name="button5">5</string>
+
     <string name="activityFilter">Filter</string>
+    <string name="activityFilterGameSet">Filter Game Sets</string>
+    <string name="activityFilterHenchmen">Filter Henchmen</string>
+    <string name="activityFilterHero">Filter Heroes</string>
+    <string name="activityFilterMastermind">Filter Masterminds</string>
+    <string name="activityFilterScheme">Filter Schemes</string>
+    <string name="activityFilterVillains">Filter Villains</string>
 
     <string name="checkEnabled">Enabled</string>
 </resources>
